new files added for background

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,7 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
     </head>
     <body>
-    
+
     <div class="container">
         <% if(error && error.length > 0){ %>
             <div class="alert alert-danger" role="alert">
@@ -22,19 +22,19 @@
             </div>
         <% } %>
     </div>
-    
+
     <div id="landing-header">
  		<h1>Welcome to Movie-Hub</h1>
 		<a href="/login" class="btn btn-lg btn-success"> Login </a><br><br>
         <a href="/register" class="btn btn-lg btn-success"> Register</a>
     </div>
-    
+
     <ul class="slideshow">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><img src="/images/pursuit.jpg" width="100%" height="100%"></li>
+      <li><img src="/images/wonder_woman.jpg" width="100%" height="100%"></li>
+      <li><img src="/images/usual.jpg" width="100%" height="100%"></li>
+      <li><img src="/images/guardian.jpg" width="100%" height="100%"></li>
+      <li><img src="/images/shawshank.jpg" width="100%" height="100%"></li>
     </ul>
 
 <% include partials/footer %>
