--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+    <style>
+    .review{
+      background: #337ab7;
+      color: white;
+      border-radius: 10px;
+    }
+    </style>
     </head>
     <body>
         <nav class="navbar navbar-default">
