--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,33 @@
       color: white;
       border-radius: 10px;
     }
+    .jumbotron .container{
+      background: rgba(223, 240, 216, 0.61);
+      border: 2px solid green;
+      border-radius: 10px;
+    }
+    .container .jumbotron, .container-fluid .jumbotron{
+          padding: 25px;
+          background: rgba(51, 122, 183, 0.27)
+    }
+    .input-group{
+          padding-bottom: 20px;
+    }
+    .col-lg-2{
+          width: 20%;
+    }
+    .navbar-default{
+      border: 6px solid rgba(234, 46, 13, 0.54);
+      background: rgba(217, 237, 247, 0.43);
+    }
+    .navbar-default .navbar-brand{
+      color: #337ab7;
+      font-size: 30px;
+    }
+    .navbar-default .navbar-nav>li>a{
+      color: #337ab7;
+      font-size: 20px;
+    }
     </style>
     </head>
     <body>
