More style changes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
       background: #337ab7;
       color: white;
       border-radius: 10px;
+          border: 2px solid rgba(255, 96, 0, 0.84);
     }
     .jumbotron .container{
       background: rgba(223, 240, 216, 0.61);
@@ -20,7 +21,8 @@
     }
     .container .jumbotron, .container-fluid .jumbotron{
           padding: 25px;
-          background: rgba(51, 122, 183, 0.27)
+          background: rgba(51, 122, 183, 0.27);
+              border: 2px solid #357ab7;
     }
     .input-group{
           padding-bottom: 20px;
