--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -1,12 +1,12 @@
 <% include partials/header %>
-<style>
-    body{
-        background-image:url("http://www.hdwallpapers.in/walls/murder_on_the_orient_express_2017_4k-wide.jpg");
-    }
-</style>
 <body>
-    
-
+  <style>
+  .row {
+      background: rgba(153, 221, 255, 0.33);
+      margin-right: -15px;
+      margin-left: -15px;
+    }
+  </style>
 <div class="container style">
     <div class="row">
         <div class="col-md-12">
@@ -52,4 +52,3 @@
 </div>
 </body>
 <% include partials/footer %>
-
