--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,30 +2,33 @@
 <html>
     <head>
         <title>
-            Movie-Hub
+            Mini-Flick
         </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
     <style>
-    /*body{
-      background: url("/images/film_bg.jpg");
+    h2{
+      color: white;
+    }
+    body{
+      background: url("/images/film_bg0.jpg");
       background-size:100%;
-    }*/
+    }
     .review{
-      background: #337ab7;
+      background: #00cc00;
       color: white;
       border-radius: 10px;
 
     }
     .jumbotron .container{
-      background: rgba(223, 240, 216, 0.61);
+      background: rgba(223, 240, 216, 1);
       border: 2px solid green;
       border-radius: 10px;
     }
     .container .jumbotron, .container-fluid .jumbotron{
           padding: 25px;
-          background: rgba(51, 122, 183, 0.27);
+          background: #006699;
 
     }
     .input-group{
@@ -35,15 +38,16 @@
           width: 20%;
     }
     .navbar-default{
-      border: 6px solid rgba(234, 46, 13, 0.54);
-      background: rgba(217, 237, 247, 0.43);
+      border: 4px solid #ff8c1a;
+      background: rgba(217, 237, 247, 0.9);
     }
     .navbar-default .navbar-brand{
-      color: #337ab7;
+      color: white;
       font-size: 30px;
+      background: rgba(0, 103, 153, 0.5);
     }
     .navbar-default .navbar-nav>li>a{
-      color: #337ab7;
+      color: #ff3300;
       font-size: 20px;
     }
     </style>
@@ -52,7 +56,7 @@
         <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/home"> Movie-Hub</a>
+                <a class="navbar-brand" href="/home"> Home </a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
