--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,12 @@
 <% include  partials/header.ejs %>
 <style>
 .followers{
-  background: red;
+      background: rgb(255, 205, 0);
   color: white;
+  margin-left: 550px;
 }
 .followed{
-  background: red;
+      background: rgba(150, 0, 255, 0.51);
   color: white;
 }
 </style>
@@ -13,12 +14,12 @@
     <header class='jumbotron'>
         <div class='container'>
             <h2 style="color:#333846;"> Welcome to Mini Flick
-              <p> <a class='btn followers btn-large' href="/followers/<%= currentuser._id %>"> Followers </a> </p>
-              <p> <a class='btn followed btn-large' href="/followed/<%= currentuser._id %>"> Following </a> </p>
+              <a class='btn followers btn-large' href="/follow/<%= 1 %>/<%= currentuser._id %>"> Followers </a>
+              <a class='btn followed btn-large' href="/follow/<%= 2 %>/<%= currentuser._id %>"> Following </a>
             </h2>
-            <p> The best reviews about movies can be found here </p>
+            <!-- <p> The best reviews about movies can be found here </p> -->
             <p> <a class='btn btn-primary btn-large' href="/search"> Search your Movie  <i class="glyphicon glyphicon-search"></i></a></p>
-            <p> <a class='btn btn-success btn-large' href="/watchlist/<%= currentuser._id %>"> My Watchlist <i class="glyphicon glyphicon-menu-hamburger"> </i></a> </p>
+            <p> <a class='btn btn-success btn-large' href="/watchlist/<%= currentuser._id %>"> Watchlist <i class="glyphicon glyphicon-menu-hamburger"> </i></a> </p>
             <p> <a class='btn btn-info btn-large' href="/user/<%= currentuser._id %>/edit"> Edit Profile <i class="glyphicon glyphicon-pencil"></i></a> </p>
             <div class="text-right">
                 <!--<form action="/uSearch" method="GET">-->
