--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -64,7 +64,7 @@
                         <li><a href="/login">Login </li>
                         <li><a href="/register">Sign Up</a></li>
                     <% }else{ %>
-                        <li><a href="#">Signed in as <%= currentuser.username %></a></li>
+                        <li><a href="#"><%= currentuser.fname %> <%= currentuser.lname %></a></li>
                         <li><a href="/logout">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a></a></li>
                     <% } %>
                 </ul>
