--- a/views/watchlist.ejs
+++ b/views/watchlist.ejs
@@ -1,10 +1,10 @@
 <% include partials/header.ejs %>
 <div class="container">
-<h2 > <%= user.fname %> <%= user.lname %>'s <span style="font-size:0.8em; color:blue">Watchlist</span></h2>
+<h2 > <%= user.fname %> <%= user.lname %>'s <span style="font-size:0.8em">Watchlist</span></h2>
 <br>
 <div class='row text-center' style="display:flex; flex-wrap:wrap;">
         <% user.watchlist.forEach(function(movie){ %>
-        
+
             <div class='col-lg-3 col-sm-6'>
                 <div class="thumbnail">
                     <% if (movie.image !== 'N/A' ) {%>
@@ -12,7 +12,7 @@
                     <% }else{ %>
                         <img src="http://www.freeiconspng.com/uploads/no-image-icon-23.jpg" >
                     <% } %>
-                    
+
                     <div class='caption'>
                         <h4><a href="/movie/<%= movie.imdb_id %>" ><%= movie.name %> - <%= movie.year %> </a></h4>
                     </div>
@@ -23,11 +23,10 @@
                         <button class="btn btn-sm btn-primary">Mark as watched </button>
                         <br><br>
                     </form>
-                </div>    
+                </div>
             </div>
         <% }) %>
     </div>
 </div>
 </div>
-<% include partials/footer.ejs %>    
-    
+<% include partials/footer.ejs %>
