Compressed images uploaded and path changed.

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -29,10 +29,10 @@
 
     <ul class="slideshow">
       <li><img src="/images/pursuit.jpg" width="100%" height="100%"></li>
-      <li><img src="/images/wonder_woman.jpg" width="100%" height="100%"></li>
-      <li><img src="/images/usual.jpg" width="100%" height="100%"></li>
-      <li><img src="/images/guardian.jpg" width="100%" height="100%"></li>
-      <li><img src="/images/shawshank.jpg" width="100%" height="100%"></li>
+      <li><img src="/images/wonder_woman-min.jpg" width="100%" height="100%"></li>
+      <li><img src="/images/usual-min.jpg" width="100%" height="100%"></li>
+      <li><img src="/images/guardian.png" width="100%" height="100%"></li>
+      <li><img src="/images/shawshank-min.jpg" width="100%" height="100%"></li>
     </ul>
 
 <% include partials/footer %>
