--- a/views/recommendations.ejs
+++ b/views/recommendations.ejs
@@ -1,6 +1,6 @@
 <% include partials/header.ejs %>
 <div class="container">
-<h2 >Recommedations</h2>
+<h2 >Recommendations</h2>
 <br>
 <div class='row text-center' style="display:flex; flex-wrap:wrap;">
         <% user.recommendations.forEach(function(movie){ %>
