--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -20,6 +20,6 @@
 </div>
 </div>
 <% } else {%>
-<h1 style="color:white;"> No reviews for "<%= reviewname %>" </h1>
+<h3 style="color:white;     margin-left: 20px;"> No reviews for "<%= reviewname %>", <a href="/home">Try again </h3>
 <% } %>
 <% include partials/footer.ejs %>
