--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,10 @@
       background-size:100%;
     }
     .review{
-      background: #00cc00;
+      background: #00b09b;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #96c93d, #00b09b);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
       color: white;
       border-radius: 10px;
 
@@ -28,27 +31,49 @@
     }
     .container .jumbotron, .container-fluid .jumbotron{
           padding: 25px;
-          background: #006699;
+          background: #000046;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
+
 
     }
     .input-group{
           padding-bottom: 20px;
+          /*width: 300px;*/
     }
     .col-lg-2{
           width: 20%;
     }
     .navbar-default{
-      border: 4px solid #ff8c1a;
-      background: rgba(217, 237, 247, 0.9);
+      border: 4px solid #202027;
+      background: #24C6DC;  /* fallback for old browsers */
+      background: -webkit-linear-gradient(to bottom, #514A9D, #24C6DC);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to bottom, #514A9D, #24C6DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     }
     .navbar-default .navbar-brand{
       color: white;
       font-size: 30px;
       background: rgba(0, 103, 153, 0.5);
     }
+    .navbar-default .navbar-brand:hover{
+      color: #00cc00;
+    }
     .navbar-default .navbar-nav>li>a{
-      color: #ff3300;
+      color: white;
       font-size: 20px;
+    }
+    .navbar-default .navbar-nav>li>a:hover{
+      color:red;
+    }
+    .home{
+      line-height: 0;
+    }
+    .edit_list{
+      margin-top: -2px;
     }
     </style>
     </head>
@@ -56,15 +81,25 @@
         <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/home"> Home </a>
+                <a class="navbar-brand" href="/home"> Home <i class="home glyphicon glyphicon-home"> </i></a>
             </div>
+            <!-- <div class="text-right">
+                <form action="/uSearch" method="GET">
+                    <div class="input-group input-group-lg">
+                      <input type="text" class="form-control" name="user_key" placeholder="Search User">
+                      <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                      </div>
+                    </div>
+                </form>
+            </div> -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentuser){ %>
                         <li><a href="/login">Login </li>
                         <li><a href="/register">Sign Up</a></li>
                     <% }else{ %>
-                        <li><a href="#"><%= currentuser.fname %> <%= currentuser.lname %></a></li>
+                        <li class="edit_list"><a href="/user/<%= currentuser._id %>/edit"><%= currentuser.fname %> <%= currentuser.lname %><i class=" button glyphicon glyphicon-edit"></i></a></li>
                         <li><a href="/logout">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a></a></li>
                     <% } %>
                 </ul>
