More styling changes in user profile and home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -80,7 +80,7 @@ margin-bottom: -12px;
     </header>
     <% if(all_movies.length!==0) {%>
     <h2 class="review" align="center"> Recent Reviews by Others</h2><br>
-    <div class='row text-center' style="display:flex;flex-wrap:wrap;background: rgba(223, 240, 216, 0.35);border-radius: 10px;padding: 10px;padding-bottom: 0px;">
+    <div class='row text-center' style="display:flex;flex-wrap:wrap;border-radius: 10px;padding: 10px;padding-bottom: 0px;">
         <% all_movies.forEach(function(movie){ %>
             <div class='col-lg-2 col-sm-6'>
                 <div class='thumbnail'>
