--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,8 +17,8 @@
     }
     .review{
       background: #00b09b;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #96c93d, #00b09b);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: -webkit-linear-gradient(to left, #96c93d, #00b09b);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to left, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
       color: white;
       border-radius: 10px;
@@ -32,13 +32,8 @@ background: linear-gradient(to left, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Fi
     .container .jumbotron, .container-fluid .jumbotron{
           padding: 25px;
           background: #000046;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-
-
-
+          background: -webkit-linear-gradient(to bottom, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+          background: linear-gradient(to bottom, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
     .input-group{
           padding-bottom: 20px;
@@ -75,6 +70,9 @@ background: linear-gradient(to bottom, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, 
     .edit_list{
       margin-top: -2px;
     }
+    .dl-horizontal dd {
+    margin-left: 100px;
+}
     </style>
     </head>
     <body>
