--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -33,11 +33,11 @@
                     <button class="btn btn-lg btn-primary btn-block"> Submit</button>
                 </div>
             </form>
-            <a href='/'> Go back </a>
-            
+            <a href='/home'> Go back </a>
+
         </div>
-        
-        
+
+
     </div>
-</div> 
+</div>
 <% include partials/footer.ejs %>
